interface/web/themes/default/assets/stylesheets/ispconfig.css
/* ... */
input[type="password"].form-control[readonly] {
	cursor: text;
}
.tooltip-inner {
    max-width: 100%;
}
.notification {
	width: 35px;
	height: 35px;
	background: #c70f19;
	border-radius: 50%;
	display: flex;
	margin-top: 15px;
	cursor: pointer;
	margin-right: 15px;
	float: right;
}
.notification {
	animation: pulse 2s infinite;
}
@media (max-width: 600px) {
	.notification {
		margin-top: 0px;
		margin-right: 0px;
		margin-left: 230px;
		position: relative;
	}
}
@keyframes pulse {
	0% {
		background: #ff000e;
	}
	50% {
		background: #c70f19;
	}
	100% {
		background: #ff000e;
	}
}
.systemmonitor-state.state-info .statusMsg {
    display: none;
}

span.notification_text {
    display: block;
    margin-left: auto;
    margin-right: auto;
    margin-top: auto;
    margin-bottom: auto;
    font-family: inherit;
    color: white;
}

span.company_name {
    font-weight: bold;
}

span.tmp_account_name {
    font-size: 0.9em;
}

